--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,16 +16,18 @@
           mdbValidate
           required
         />
-        <label for="username">Username/Email</label>
+        <label for="username">{{ "login.USERNAME" | translate }}</label>
         <mdb-error
           *ngIf="f.username.invalid && (f.username.dirty || f.username.touched)"
         >
-          <span *ngIf="f.username.errors.required"
-            >Username or email is required</span
-          >
+          <span *ngIf="f.username.errors.required">{{
+            "login.REQUIRED-MSG1" | translate
+          }}</span>
         </mdb-error>
         <div style="padding-top: 5px; text-align: right">
-          <a [routerLink]="['/pricing-plans']"> Not a member? Sign up now! </a>
+          <a [routerLink]="['/pricing-plans']">
+            {{ "login.MESSAGE1" | translate }}
+          </a>
         </div>
       </div>
       <div class="md-form mb-5">
@@ -38,14 +40,18 @@
           mdbValidate
           required
         />
-        <label for="password">Password</label>
+        <label for="password">{{ "login.PASSWORD" | translate }}</label>
         <mdb-error
           *ngIf="f.password.invalid && (f.password.dirty || f.password.touched)"
         >
-          <span *ngIf="f.password.errors.required">Password is required</span>
+          <span *ngIf="f.password.errors.required"
+            >{{ "login.REQUIRED-MSG2" | translate }}
+          </span>
         </mdb-error>
         <div style="padding-top: 5px; text-align: right">
-          <a [routerLink]="['/request-reset-password']"> Forgot Password? </a>
+          <a [routerLink]="['/request-reset-password']">
+            {{ "login.MESSAGE2" | translate }}</a
+          >
         </div>
       </div>
       <div class="form-group text-center">
@@ -55,15 +61,15 @@
           [disabled]="isSubmitted && !isLoginFailed"
           class="login-btn btn"
         >
-          Login
+          {{ "login.LOGIN-BTN" | translate }}
         </button>
       </div>
     </form>
     <div class="alert alert-danger" *ngIf="isSubmitted && isLoginFailed">
-      Login failed.<br />{{ errorMessage }}
+      {{ "login.LOGIN-FAILED" | translate }} <br />{{ errorMessage }}
     </div>
     <div class="alert alert-success" *ngIf="isLoggedIn">
-      Logged in Successfully.
+      {{ "login.LOGIN-SUCCESS" | translate }}
     </div>
   </div>
 </div>
