--- a/src/app/components/user-board/user-board.component.html
+++ b/src/app/components/user-board/user-board.component.html
@@ -1,7 +1,7 @@
 <div class="user-board container-fluid">
   <div class="user-board-content container">
     <div class="d-flex flex-column">
-      <h2>Your Businesses</h2>
+      <h2>{{ "user.TITLE" | translate }}</h2>
 
       <ul class="restaurants list-group">
         <li *ngFor="let restaurant of restaurants" class="list-group-item">
@@ -22,7 +22,7 @@
                         )
                       "
                     >
-                      Create Menu
+                      {{ "user.CREATE-MENU" | translate }}
                     </button>
                   </div>
                   <div class="col-sm-auto">
@@ -31,7 +31,7 @@
                       class="btn btn-block"
                       (click)="goToRoute('/' + restaurant._id)"
                     >
-                      Preview
+                      {{ "user.PREVIEW" | translate }}
                     </button>
                   </div>
                   <div class="col-sm-auto">
@@ -40,7 +40,7 @@
                       class="btn btn-block"
                       (click)="goToRoute('/qrcode/' + restaurant._id)"
                     >
-                      QR Code
+                      {{ "user.QR-CODE" | translate }}
                     </button>
                   </div>
                   <div class="col-sm-2">
@@ -61,7 +61,9 @@
       </ul>
       <div class="add-new" *ngIf="enableAdd">
         <a routerLink="/add">
-          <button mat-raised-button class="btn">Add Business</button>
+          <button mat-raised-button class="btn">
+            {{ "user.ADD-BUSINESS-BTN" | translate }}
+          </button>
         </a>
       </div>
     </div>
